--- a/dynamics-assignments/env-vars/uat.yml
+++ b/dynamics-assignments/env-vars/uat.yml
@@ -15,9 +15,13 @@ tooling_repo: "https://github.com/fmanimashaun/tooling.git"
 # Define the PHP version and repositories
 epel_repo_url: "https://dl.fedoraproject.org/pub/epel/epel-release-latest-9.noarch.rpm"
 epel_gpg_key_url: "https://dl.fedoraproject.org/pub/epel/RPM-GPG-KEY-EPEL-9"
-remi_repo_url: "https://rpms.remirepo.net/enterprise/remi-release-9.rpm"
-remi_gpg_key_url: "https://rpms.remirepo.net/RPM-GPG-KEY-remi"
+# remi_repo_url: "https://rpms.remirepo.net/enterprise/remi-release-9.rpm"
+# remi_gpg_key_url: "https://rpms.remirepo.net/RPM-GPG-KEY-remi"
 php_version: "8.4"
+
+
+remi_package_url: "https://rpms.remirepo.net/enterprise/remi-release-{{ ansible_distribution_major_version }}.rpm"
+remi_gpg_key_url: "https://rpms.remirepo.net/enterprise/{{ ansible_distribution_major_version }}/RPM-GPG-KEY-remi"
 
 # Define the PHP extensions as a list
 php_extensions:
