--- a/roles/webserver/tasks/epel_remi.yml
+++ b/roles/webserver/tasks/epel_remi.yml
@@ -27,6 +27,7 @@
       notify: Update package cache
 
     - name: Switch to PHP module stream from Remi
-      ansible.builtin.dnf_module:
-        name: "php:remi-{{ php_version }}"
-        state: enabled
+      ansible.builtin.command:
+        cmd: "dnf module enable -y php:remi-{{ php_version }}"
+      register: dnf_result
+      changed_when: "'Enabling' in dnf_result.stdout"
