Add domains to the load balancer configuration

--- a/roles/nginx_lb/defaults/main.yml
+++ b/roles/nginx_lb/defaults/main.yml
@@ -2,3 +2,4 @@
 # Enable Nginx load balancer
 nginx_lb_enabled: false
 nginx_lb_required: "{{ load_balancer_is_required | default(false) }}"
+nginx_lb_server_name: "{{ domain_name | default('') }}"
