--- a/roles/nginx_lb/tasks/main.yml
+++ b/roles/nginx_lb/tasks/main.yml
@@ -8,3 +8,8 @@
 - name: Config Nginx Load Balancer
   ansible.builtin.include_tasks: configure_lb.yml
   when: lb_type == 'nginx'
+
+# Config Nginx Load Balancer SSL certificate
+- name: Config Nginx Load Balancer SSL certificate
+  ansible.builtin.include_tasks: ssl_lb.yml
+  when: lb_type == 'nginx'
