Add domains to the load balancer configuration

--- a/dynamics-assignments/env-vars/uat.yml
+++ b/dynamics-assignments/env-vars/uat.yml
@@ -43,4 +43,4 @@ nfs_allowed_subnet: "172.31.0.0/20"
 nginx_lb_enabled: false
 apache_lb_enabled: true
 load_balancer_is_required: true
-
+certbot_email: "fisayo.animashaun@outlook.com"
