Add domains to the load balancer configuration

--- a/roles/nginx_lb/tasks/ssl_lb.yml
+++ b/roles/nginx_lb/tasks/ssl_lb.yml
@@ -43,7 +43,7 @@
     - load_balancer_is_required
     - nginx_lb_enabled
 
-# Obtain SSL certificate for Apache using Certbot
+# Obtain SSL certificate for Nginx using Certbot
 - name: Obtain SSL certificate for Apache using Certbot
   become: true
   ansible.builtin.shell: >
