Add domains to the load balancer configuration

--- a/roles/apache_lb/tasks/configure_lb.yml
+++ b/roles/apache_lb/tasks/configure_lb.yml
@@ -60,6 +60,7 @@
     - proxy_balancer
     - proxy_http
     - headers
+    - ssl
     - lbmethod_bytraffic
   changed_when: false
   notify: Restart Apache
