--- a/playbooks/site.yml
+++ b/playbooks/site.yml
@@ -15,7 +15,7 @@
   roles:
     - dbserver
 
-# Set up MySQL on database servers
+# Set up NFS server
 - name: Set up NFS server
   hosts: nfs_server
   become: true
@@ -23,7 +23,7 @@
     - nfs-server
 
 # Set up Apache and PHP on web servers
-- name: Import webservers play
+- name:  Set up Apache and PHP on web servers
   ansible.builtin.import_playbook: "../static-assignments/uat-webserver.yml"
 
 # Configure load balancers
