Add domains to the load balancer configuration

--- a/dynamics-assignments/env-vars/uat.yml
+++ b/dynamics-assignments/env-vars/uat.yml
@@ -36,7 +36,7 @@ php_extensions:
 nfs_allowed_subnet: "172.31.0.0/20"
 
 # Enable Load balancer
-nginx_lb_enabled: false
-apache_lb_enabled: true
+nginx_lb_enabled: true
+apache_lb_enabled: false
 load_balancer_is_required: true
 certbot_email: "fisayo.animashaun@outlook.com"
